# hnix

./: hnix.cabal  project.nix
Nix/: Lexer.hs  Lexer.x  Lexer2.hs  Parser.y
Nix/Expr/: Types.hs
data/lang/: eval-fail-abort.out  eval-fail-assert.exp  eval-fail-bad-antiquote-1.out  eval-fail-bad-antiquote-3.exp  eval-fail-blackhole.exp  eval-fail-deepseq.out  eval-fail-list.exp  eval-fail-missing-arg.exp  eval-fail-recursion.exp  eval-fail-remove.out  eval-fail-scope-5.out  eval-fail-seq.exp  eval-fail-set-override.out  eval-fail-set.exp  eval-fail-substring.exp  eval-fail-to-path.exp  eval-fail-undeclared-arg.out  eval-okay-fromjson.nix  parse-fail-dup-attrs-1.exp  parse-fail-dup-attrs-3.out  parse-fail-dup-attrs-4.exp  parse-fail-dup-attrs-6.out  parse-fail-dup-attrs-7.exp  parse-fail-dup-formals.out  parse-fail-patterns-1.out  parse-fail-regression-20060610.exp  parse-fail-undef-var-2.out  parse-fail-undef-var.out
tests/: ParserTests.hs
