Name:                hnix
Version:             0.3.0
Synopsis:            Haskell implementation of the Nix language
Description:
  Haskell implementation of the Nix language.

License:             BSD3
License-file:        LICENSE
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Category:            Data, Nix
Build-type:          Simple
Cabal-version:       >=1.10
Homepage:            http://github.com/jwiegley/hnix

Extra-source-files: data/*.nix

Test-suite hnix-tests
  Type: exitcode-stdio-1.0
  Hs-source-dirs: . tests
  Default-language: Haskell2010
  Main-is: Main.hs
  Other-modules:
    ParserTests
    Nix.Atoms
    Nix.Eval
    Nix.Parser
    Nix.Expr
    Nix.Pretty
    Nix.Parser.Operators
    Nix.StringOperations
    Nix.Parser.Library
    Nix.Expr.Types
    Nix.Expr.Shorthands
  Default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PatternGuards
    RankNTypes
    TupleSections
  Build-depends:
      base                     >= 4.6          && < 5
    , ansi-wl-pprint
    , containers
    , directory
    , filepath
    , text
    , transformers
    , parsers >= 0.10
    , unordered-containers
    , data-fix
    , tasty
    , tasty-th
    , tasty-hunit
    , deepseq
  Build-tools: alex, happy
  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/jwiegley/hnix.git
